# ftsobest-websocket-multi-collector

./: .gitignore  Cargo.toml  LICENSE  README.md  config_server1.json
.github/workflows/: rust.yml
helper/: binance_supported_trades.sh  binanceus_supported_trades.sh  bitfinix_supported_trades.sh  bitrue_supported_trades.sh  bybit_supported_trades.sh  coinbase_supported_trades.sh  gateio_supported_trades.sh  kraken_supported_trades.sh  kucoin_supported_trades.sh  okx_supported_trades.sh  run_all_supported_trades.sh
src/: config.rs  main.rs  master_sender.rs  metrics.rs  schema.rs  util.rs
src/collector/: mod.rs  runner.rs
src/exchanges/: adapter.rs  binance.rs  binanceus.rs  bitfinex.rs  bitrue.rs  bitstamp.rs  bybit.rs  coinbase.rs  gateio.rs  kraken_v2.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs
