[package]
name = "ftsobest-websocket-multi-collector"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
rand = "0.9"
async-trait = "0.1.89"
